# MiragineWar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
scripts/: configure.ps1  configure.sh
src/: main.cpp  pch.hpp
src/app/: AppMetadata.hpp  AppMetadata.hpp.in  EventBus.cpp  EventBus.hpp  FPS.cpp  FPS.hpp  Layout.hpp  NetPacket.cpp  NetPacket.hpp  Renderer.hpp  Resources.cpp  Resources.hpp  ScriptComponent.hpp  ScriptContext.cpp  ScriptContext.hpp  ScriptLib.cpp  ScriptLib.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptModule.cpp  ScriptModule.hpp  ScriptTypes.hpp  Settings.cpp  Settings.hpp  TTF.hpp  TextEngine.hpp  Window.hpp
src/app/Component/: Clickable.hpp  RenderCallback.hpp  Text.hpp  Texture.hpp  TextureGrid.hpp  TextureRotation.hpp  ZIndex.hpp
src/app/Component/Render/: RenderCallback.hpp  Text.hpp  Texture.hpp  TextureGrid.hpp  ZIndex.hpp
src/app/System/: Clickable.cpp  Clickable.hpp  FunctionalKeyDef.hpp  Input.cpp  Input.hpp  InputTopicDef.hpp  Network.cpp  Network.hpp  Render.cpp  Render.hpp  RenderCallback.cpp  RenderCallback.hpp  TextureRender.cpp  TextureRender.hpp  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp  ZIndex.hpp
src/app/resources/: AllInOneIndex.hpp  AllInOneRes.hpp  AnimSeqFrame.hpp  AnimSeqFrames.hpp  GUID.hpp  Index.cpp  Index.hpp  Mox.hpp  Pak.cpp  Pak.hpp  PakMeta.hpp  ResourceDescription.hpp
src/game/: Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  World.cpp  World.hpp
src/game/Component/: Clickable.hpp  Collision.hpp  Invalid.hpp  Logic.hpp  MouseInteractive.hpp  Movement.hpp  Pointable.hpp  Position.hpp  Soldier.hpp  SoldierTag.hpp  State.hpp  Synchronize.hpp  Transform.hpp  UIClickable.hpp  UIElement.hpp  UIPointable.hpp  Visible.hpp
src/game/Logic/: MainMenuScene.cpp  MainMenuScene.hpp
src/game/System/: Collide.cpp  Collide.hpp  GarbageCollection.cpp  GarbageCollection.hpp  Logic.cpp  Logic.hpp  MouseInteractive.cpp  MouseInteractive.hpp  Move.cpp  Move.hpp  NetGame.cpp  NetGame.hpp  Scene.cpp  Scene.hpp  Synchronize.cpp  Synchronize.hpp  System.hpp  Trigger.cpp  Trigger.hpp  Visible.cpp  Visible.hpp
src/game/System/Input/: MouseInteractive.hpp
src/game/Utility/: Message.cpp  Message.hpp  Soldier.cpp  Soldier.hpp
src/utility/: DebugLog.hpp  LRU.hpp  LTGrid.hpp  Logger.cpp  Logger.hpp  LooseQuadTree.hpp  LooseQuadTreeEx.hpp  MsgPack.hpp  RTree.hpp  Random.hpp  RectAdapter.hpp  Registry.cpp  Registry.hpp  RegistryAppComponents.cpp  RegistryGameComponents.cpp  ScriptContext.cpp  ScriptContext.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptTypes.hpp  Singleton.hpp  Topic.hpp  Topics.hpp
src/utility/Math/: FRect.hpp  Vector2.hpp  Vector3.hpp
